Add button to clear stream cache